--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://moha35abu.github.io/Special-Edu-Ai/",
   "name": "special_edu_ai",
   "private": true,
   "version": "0.0.0",
