--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "homepage": "https://moha35abu.github.io/Special-Edu-Ai/",
   "name": "special_edu_ai",
+  "homepage": "https://moha35abu.github.io/Special-Edu-Ai/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google/genai": "^1.39.0",
