--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "special_edu_ai",
   "homepage": "https://moha35abu.github.io/Special-Edu-Ai/",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -14,7 +14,8 @@
   "dependencies": {
     "@google/genai": "^1.39.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.19.9",
